[gd_scene load_steps=3 format=3 uid="uid://dt241i6v37m3h"]

[ext_resource type="Script" path="res://scenes/game/ui/item_picker/item_button.gd" id="1_2cc2y"]
[ext_resource type="Texture2D" uid="uid://cthdjn64hfl7r" path="res://icon.svg" id="2_04g6g"]

[node name="ItemButton" type="MarginContainer"]
custom_minimum_size = Vector2(256, 384)
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 0.533333
offset_bottom = -3.05176e-05
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2cc2y")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="ItemIconTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_04g6g")
expand_mode = 1

[node name="ItemNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "	ItemName"
horizontal_alignment = 1

[node name="ItemDescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
text = "TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST "
horizontal_alignment = 1
autowrap_mode = 3

[node name="ItemPriceLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "FREE"
horizontal_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
